CHROMIUM: drm/img-rogue: Always convert defreq_target to OPP frequency

The devfreq core expects a devfreq profile's target() callback to always
return with freq set to the current frequency - even if the function
does not actually change the frequency, it should still modify *freq
to match the current un-set value.

 * @target:
 *                      Before returning, target function should set
 *                      freq at the current frequency.

The devfeq core relies on the returned freq value being a correct OPP
frequency to perform its state transition statistics.

Signed-off-by: Daniel Kurtz <djkurtz@chromium.org>

BUG=chromium:722329
TEST=http://webglsamples.org/aquarium/aquarium.html
  => dmesg does not contain
  "devfreq 13000000.mfgsys-gpu: Couldn't update frequency transition information."

Change-Id: Ia42354cfc98edd303c40d3def31f06a097d9152d
Reviewed-on: https://chromium-review.googlesource.com/505988
Commit-Ready: Daniel Kurtz <djkurtz@chromium.org>
Tested-by: Daniel Kurtz <djkurtz@chromium.org>
Reviewed-by: Frank Binns <frank.binns@imgtec.com>
Reviewed-by: Nicolas Boichat <drinkcat@chromium.org>